Revert "fix: make form responsive on mobile"
This reverts commit 7fa86f528fc573c78b3aa7c873ce2b584cdbbfea.

--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
-	padding-block: 24px;
-	padding-inline: 24px;
+	padding: 24px;
 	align-items: center;
 	justify-content: center;
 	background-color: oklch(98.5% 0.002 247.839);
@@ -40,9 +39,8 @@ form {
 	display: flex;
 	flex-direction: inherit;
 	gap: 16px;
-	width: 100%;
-	max-width: 380px;
-	margin: 24px auto;
+	width: 380px;
+	margin: 24px;
 	border-radius: 16px;
 	padding: 24px;
 	background-color: white;
@@ -55,7 +53,6 @@ form div {
 	display: inherit;
 	flex-direction: inherit;
 	gap: 8px;
-	width: 100%;
 }
 
 form p {
@@ -70,7 +67,6 @@ label {
 }
 
 input {
-	width: 100%;
 	border: 1px solid darkgray;
 	border-radius: 6px;
 	padding: 8px 12px;
@@ -83,7 +79,6 @@ button {
 	font-weight: 600;
 	border: none;
 	border-radius: 6px;
-	width: 100%;
 	padding: 9px 16px;
 	background-color: oklch(62.7% 0.194 149.214);
 	color: white;
